--- a/bot/package.json
+++ b/bot/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "botkit-starter-slack",
-  "version": "0.0.2",
-  "description": "A starter kit for building a custom Slack bot with Botkit Studio",
+  "name": "slack-bot",
+  "version": "0.0.1",
+  "description": "A Slack bot with using Botkit.",
   "main": "bot.js",
   "scripts": {
     "start": "node bot.js"
@@ -24,17 +24,16 @@
   "devDependencies": {},
   "repository": {
     "type": "git",
-    "url": "https://github.com/howdyai/botkit-starter-slack.git"
+    "url": "https://github.com/rahulkulmi/timesheet.git"
   },
   "bugs": {
-    "url": "https://github.com/howdyai/botkit-starter-slack/issues"
+    "url": "https://github.com/rahulkulmi/timesheet/issues"
   },
-  "homepage": "https://github.com/howdyai/botkit-starter-slack",
+  "homepage": "",
   "keywords": [
-    "bots",
-    "chatbots",
+    "bot",
     "slack"
   ],
-  "author": "ben@howdy.ai",
+  "author": "",
   "license": "ISC"
 }
