--- a/bot/package.json
+++ b/bot/package.json
@@ -1,25 +1,25 @@
 {
   "name": "slack-bot",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "description": "A Slack bot with using Botkit.",
   "main": "bot.js",
   "scripts": {
     "start": "node bot.js"
   },
   "dependencies": {
-    "async": "^2.6.0",
-    "body-parser": "^1.15.2",
-    "botkit": "^0.6.7",
-    "botkit-storage-mongo": "^1.0.6",
-    "botkit-studio-metrics": "^0.0.2",
-    "cookie-parser": "^1.4.3",
-    "debug": "^2.3.3",
-    "express": "^4.14.0",
-    "express-hbs": "^1.0.4",
-    "node-env-file": "^0.1.8",
-    "querystring": "^0.2.0",
-    "request": "^2.79.0",
-    "wordfilter": "^0.2.6"
+    "async": "2.6.0",
+    "body-parser": "1.15.2",
+    "botkit": "0.6.7",
+    "botkit-storage-mongo": "1.0.6",
+    "botkit-studio-metrics": "0.0.2",
+    "cookie-parser": "1.4.3",
+    "debug": "2.3.3",
+    "express": "4.14.0",
+    "express-hbs": "1.0.4",
+    "node-env-file": "0.1.8",
+    "querystring": "0.2.0",
+    "request": "2.79.0",
+    "wordfilter": "0.2.6"
   },
   "devDependencies": {},
   "repository": {
@@ -34,6 +34,6 @@
     "bot",
     "slack"
   ],
-  "author": "",
+  "author": "Rahul Kulmi",
   "license": "ISC"
 }
