--- a/backend/package.json
+++ b/backend/package.json
@@ -14,13 +14,13 @@
     "express": "4.16.2",
     "express-session": "1.15.6",
     "file-stream-rotator": "0.2.0",
-    "handlebars": "^4.0.11",
+    "handlebars": "4.0.11",
     "method-override": "2.3.10",
     "mongoose": "4.13.6",
     "morgan": "1.9.0",
     "node-env-file": "0.1.8",
-    "nodemailer": "^4.4.0",
-    "nodemailer-express-handlebars": "^2.0.0",
+    "nodemailer": "4.4.0",
+    "nodemailer-express-handlebars": "2.0.0",
     "winston": "2.4.0"
   },
   "devDependencies": {
