--- a/backend/package.json
+++ b/backend/package.json
@@ -14,8 +14,10 @@
     "body-parser": "1.18.2",
     "express": "4.16.2",
     "express-session": "1.15.6",
+    "express-validator": "3.2.1",
     "file-stream-rotator": "0.2.0",
     "handlebars": "4.0.11",
+    "jsonwebtoken": "8.1.0",
     "method-override": "2.3.10",
     "mongoose": "4.13.6",
     "morgan": "1.9.0",
