--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@sendgrid/mail": "6.1.4",
     "async": "2.6.0",
+    "bcrypt": "1.0.3",
     "body-parser": "1.18.2",
     "express": "4.16.2",
     "express-session": "1.15.6",
