--- a/bot/package.json
+++ b/bot/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "async": "2.6.0",
+    "bcrypt": "1.0.3",
     "body-parser": "1.15.2",
     "botkit": "0.6.7",
     "botkit-storage-mongo": "1.0.6",
