--- a/backend/package.json
+++ b/backend/package.json
@@ -22,7 +22,7 @@
     "method-override": "2.3.10",
     "mongoose": "4.13.6",
     "morgan": "1.9.0",
-    "node-crontab": "0.0.8",
+    "node-cron": "1.2.1",
     "node-env-file": "0.1.8",
     "winston": "2.4.0"
   },
