--- a/bot/package.json
+++ b/bot/package.json
@@ -17,6 +17,7 @@
     "debug": "2.3.3",
     "express": "4.14.0",
     "express-hbs": "1.0.4",
+    "node-cron": "1.2.1",
     "node-env-file": "0.1.8",
     "querystring": "0.2.0",
     "request": "2.79.0",
