Change bot server name.

--- a/bot/docker-compose.yml
+++ b/bot/docker-compose.yml
@@ -8,7 +8,7 @@ mongodb:
 
 application:
   image: newput/bot:2.0
-  container_name: ts-dev-server
+  container_name: ts-bot-server
   volumes:
     - ./:/ts-bot
   environment:
