Update pm2 run command.

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -30,5 +30,5 @@ EXPOSE 9095
 # ENTRYPOINT ["node"]
 # Defines your runtime(define default command)
 # pm2 start app.js --max-memory-restart 120M -i 4
-# CMD ["pm2-docker", "process.yml"]
+# CMD ["pm2-runtime", "process.yml"]
 CMD ["/start.sh"]
