--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "handlebars": "4.0.11",
     "jsonwebtoken": "8.1.0",
     "method-override": "2.3.10",
+    "mongodb": "^3.3.0-beta2",
     "mongoose": "4.13.6",
     "morgan": "1.9.0",
     "node-cron": "1.2.1",
@@ -32,5 +33,8 @@
   },
   "pre-commit": [
     "eslint"
-  ]
+  ],
+  "engines": {
+    "node": "6.17.1"
+  }
 }
