--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
     "mongodb": "^3.3.0-beta2",
     "mongoose": "4.13.6",
     "morgan": "1.9.0",
+    "multer": "^1.4.2",
     "node-cron": "1.2.1",
     "node-env-file": "0.1.8",
     "winston": "2.4.0"
