--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
     "async": "2.6.0",
     "bcrypt": "1.0.3",
     "body-parser": "1.18.2",
+    "csv-parser": "^2.3.0",
     "express": "4.16.2",
     "express-session": "1.15.6",
     "express-validator": "3.2.1",
