--- a/backend/package.json
+++ b/backend/package.json
@@ -25,8 +25,11 @@
     "mongoose": "4.13.6",
     "morgan": "1.9.0",
     "multer": "^1.4.2",
+    "mustache": "^3.0.1",
+    "mustache-express": "^1.2.8",
     "node-cron": "1.2.1",
     "node-env-file": "0.1.8",
+    "puppeteer": "^1.19.0",
     "winston": "2.4.0"
   },
   "devDependencies": {
@@ -37,6 +40,6 @@
     "eslint"
   ],
   "engines": {
-    "node": "6.17.1"
+    "node": "7.8.0"
   }
 }
