--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "express-validator": "3.2.1",
     "file-stream-rotator": "0.2.0",
     "handlebars": "4.0.11",
+    "html-pdf": "^2.2.0",
     "jsonwebtoken": "8.1.0",
     "method-override": "2.3.10",
     "mongodb": "^3.3.0-beta2",
@@ -29,7 +30,6 @@
     "mustache-express": "^1.2.8",
     "node-cron": "1.2.1",
     "node-env-file": "0.1.8",
-    "puppeteer": "^1.19.0",
     "winston": "2.4.0"
   },
   "devDependencies": {
