--- a/backend/package.json
+++ b/backend/package.json
@@ -30,6 +30,7 @@
     "mustache-express": "^1.2.8",
     "node-cron": "1.2.1",
     "node-env-file": "0.1.8",
+    "underscore": "^1.9.1",
     "winston": "2.4.0"
   },
   "devDependencies": {
