--- a/backend/package.json
+++ b/backend/package.json
@@ -13,24 +13,24 @@
     "async": "2.6.0",
     "bcrypt": "1.0.3",
     "body-parser": "1.18.2",
-    "csv-parser": "^2.3.0",
+    "csv-parser": "2.3.0",
     "express": "4.16.2",
     "express-session": "1.15.6",
     "express-validator": "3.2.1",
     "file-stream-rotator": "0.2.0",
     "handlebars": "4.0.11",
-    "html-pdf": "^2.2.0",
+    "html-pdf": "2.2.0",
     "jsonwebtoken": "8.1.0",
     "method-override": "2.3.10",
-    "mongodb": "^3.3.0-beta2",
+    "mongodb": "3.3.0-beta2",
     "mongoose": "4.13.6",
     "morgan": "1.9.0",
-    "multer": "^1.4.2",
-    "mustache": "^3.0.1",
-    "mustache-express": "^1.2.8",
+    "multer": "1.4.2",
+    "mustache": "3.0.1",
+    "mustache-express": "1.2.8",
     "node-cron": "1.2.1",
     "node-env-file": "0.1.8",
-    "underscore": "^1.9.1",
+    "underscore": "1.9.1",
     "winston": "2.4.0"
   },
   "devDependencies": {
@@ -39,8 +39,5 @@
   },
   "pre-commit": [
     "eslint"
-  ],
-  "engines": {
-    "node": "7.8.0"
-  }
+  ]
 }
